add path for input file

--- a/PennyStockTS.ipynb
+++ b/PennyStockTS.ipynb
@@ -86,7 +86,7 @@
    ],
    "source": [
     "# load ticker list from excel-file\n",
-    "list_stocks = pd.read_excel('list_stocks.xlsx', index_col ='Company')\n",
+    "list_stocks = pd.read_excel('inputFiles/list_stocks.xlsx', index_col ='Company')\n",
     "all_res = []\n",
     "data_group=[]\n",
     "data_group_res=[]\n",
