testing yfinance split

--- a/Stocks-PF-strategy.ipynb
+++ b/Stocks-PF-strategy.ipynb
@@ -2414,7 +2414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "51ab625e",
    "metadata": {},
    "outputs": [
@@ -2427,13 +2427,13 @@
     }
    ],
    "source": [
-    "testDF = yf.download(\"AEI\", \"2022-10-01\", \"2022-12-10\",)"
+    "testDF = yf.download(\"AEI\", \"2022-10-01\", \"2022-12-10\",back_adjust=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "1840b818",
+   "execution_count": 23,
+   "id": "7077fce4",
    "metadata": {},
    "outputs": [
     {
@@ -2932,7 +2932,7 @@
        "2022-12-09  3.74  4.06  3.74   3.78   11475"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2944,7 +2944,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6ca381a",
+   "id": "f627b623",
    "metadata": {},
    "outputs": [],
    "source": []
