add AvgVolDayLimit value

--- a/Stocks-PF-strategy.ipynb
+++ b/Stocks-PF-strategy.ipynb
@@ -36,6 +36,7 @@
     "RiskPertrade = 2000 # buy for sum \n",
     "TradeAfterDays = 150 # begin trade after TradeAfterDays days from start\n",
     "price_filter = 0.5 # below this price we open pos\n",
+    "AvgVolDayLimit = 10\n",
     "\n"
    ]
   },
@@ -47,6 +48,7 @@
    "outputs": [],
    "source": [
     "def good_price(ticker_name,date_from_list):\n",
+    "    \n",
     "    # function to calculate appropriate price\n",
     "    res = False\n",
     "    stock_ticker = yf.Ticker(ticker_name)\n",
@@ -56,6 +58,17 @@
     "        res = True\n",
     "\n",
     "    return res\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "8f8438d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def OpenPosSig():\n",
+    "    pass"
    ]
   },
   {
@@ -80,6 +93,14 @@
     "#reed = yf.Ticker(\"AEI\")\n",
     "#reed.splits"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f8d6f3ac",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -205,7 +226,7 @@
     "\n",
     "\n",
     "    # building moving average\n",
-    "    wdf['avgvol']= wdf['Volume'].rolling(window=10, win_type=None).mean()  # середній обєм за 10 днів\n",
+    "    wdf['avgvol']= wdf['Volume'].rolling(window=AvgVolDayLimit, win_type=None).mean()  # середній обєм за 10 днів\n",
     "    wdf['VolRise'] =wdf['Volume']/wdf['avgvol']-1      # building vol signal\n",
     "    wdf['volsignal']=wdf['VolRise']>VolRise            # signal column\n",
     "    wdf['TradeAfter']=wdf.index\n",
@@ -227,9 +248,10 @@
     "    status = 0\n",
     "    \n",
     "    \n",
-    "    for index, row in wdf.iterrows():\n",
+    "    for index, row in wdf.iterrows():  # change to itter....\n",
     "        # looking for opening signal \n",
-    "        if (PriceOpen ==0) & (lastrow[0]!=index):\n",
+    "        if (PriceOpen ==0) & (lastrow[0]!=index): # if we haven't opened position and it's not last row\n",
+    "            \n",
     "            if row['volsignal'] & row['TradeAfterDaysSig']:  # if Volume > than AvgVolume\n",
     "\n",
     "                PriceOpen = row['Close']  # record close price as price of open\n",
