open position only after price below limit

--- a/Stocks-PF-strategy.ipynb
+++ b/Stocks-PF-strategy.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "f64ba5a1",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "f65c9313",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "5ef8a1be",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "8f8438d5",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "5c716e14",
    "metadata": {},
    "outputs": [
@@ -83,7 +83,7 @@
        "False"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "f5c7c732",
    "metadata": {},
    "outputs": [],
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "23c38abf",
    "metadata": {},
    "outputs": [
@@ -253,6 +253,8 @@
     "        if (PriceOpen ==0) & (lastrow[0]!=index): # if we haven't opened position and it's not last row\n",
     "            \n",
     "            if row['volsignal'] & row['TradeAfterDaysSig']:  # if Volume > than AvgVolume\n",
+    "                if row[\"Close\"]>price_filter: # if price for opening is bigger than limit - please skip it\n",
+    "                    continue\n",
     "\n",
     "                PriceOpen = row['Close']  # record close price as price of open\n",
     "                wdf.at[index,'OpenPrice']= PriceOpen\n",
@@ -331,17 +333,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "b1353715",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "919.8963500442098"
+       "14.251201255512115"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "29a69b04",
    "metadata": {},
    "outputs": [],
@@ -364,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "f8c4c3b3",
    "metadata": {},
    "outputs": [],
@@ -375,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "5bd4afb6",
    "metadata": {},
    "outputs": [
@@ -418,15 +420,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2022-08-26</th>\n",
-       "      <td>360.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-09-01</th>\n",
-       "      <td>500.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-10-21</th>\n",
-       "      <td>500.000000</td>\n",
+       "      <td>-140.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2022-10-26</th>\n",
@@ -437,16 +431,12 @@
        "      <td>-140.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2022-11-09</th>\n",
-       "      <td>-140.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>2022-11-11</th>\n",
        "      <td>-140.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2022-11-15</th>\n",
-       "      <td>-420.000000</td>\n",
+       "      <td>-280.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2022-11-18</th>\n",
@@ -474,14 +464,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2022-12-09</th>\n",
-       "      <td>-333.691383</td>\n",
+       "      <td>-193.691383</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2022-12-12</th>\n",
-       "      <td>-140.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-12-15</th>\n",
        "      <td>-140.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -493,16 +479,12 @@
        "      <td>416.149010</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2023-01-11</th>\n",
-       "      <td>-140.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>2023-01-13</th>\n",
        "      <td>500.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2023-01-18</th>\n",
-       "      <td>257.733903</td>\n",
+       "      <td>152.088755</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -513,31 +495,26 @@
        "2022-08-09   10.986823\n",
        "2022-08-17 -140.000000\n",
        "2022-08-24 -140.000000\n",
-       "2022-08-26  360.000000\n",
-       "2022-09-01  500.000000\n",
-       "2022-10-21  500.000000\n",
+       "2022-08-26 -140.000000\n",
        "2022-10-26 -140.000000\n",
        "2022-11-04 -140.000000\n",
-       "2022-11-09 -140.000000\n",
        "2022-11-11 -140.000000\n",
-       "2022-11-15 -420.000000\n",
+       "2022-11-15 -280.000000\n",
        "2022-11-18 -140.000000\n",
        "2022-11-23 -140.000000\n",
        "2022-11-28  500.000000\n",
        "2022-12-05  500.000000\n",
        "2022-12-06 -140.000000\n",
        "2022-12-08 -140.000000\n",
-       "2022-12-09 -333.691383\n",
+       "2022-12-09 -193.691383\n",
        "2022-12-12 -140.000000\n",
-       "2022-12-15 -140.000000\n",
        "2022-12-20  -51.282004\n",
        "2022-12-30  416.149010\n",
-       "2023-01-11 -140.000000\n",
        "2023-01-13  500.000000\n",
-       "2023-01-18  257.733903"
+       "2023-01-18  152.088755"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "36f5ccaf",
    "metadata": {},
    "outputs": [],
@@ -574,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "id": "51ab625e",
    "metadata": {},
    "outputs": [],
