--- a/Stocks-PF-strategy.ipynb
+++ b/Stocks-PF-strategy.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 1,
    "id": "f64ba5a1",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 2,
    "id": "f65c9313",
    "metadata": {},
    "outputs": [],
@@ -38,6 +38,9 @@
     "TradeAfterDays = 3 # begin trade after TradeAfterDays days from start\n",
     "price_filter = 0.5 # below this price we open pos\n",
     "high_prevClose = 0.1 # if high more than previous close on high_prevClose\n",
+    "UpperBandVol = 0.7      # if price is in range of  UpperBandVol and LowwerBandVol - please take a volume\n",
+    "LowwerBandVol = 0.09    #   if price is in range of  UpperBandVol and LowwerBandVol - please take a volume\n",
+    "positionValue = 10000  # the sum you need to collect\n",
     "\n",
     "\n",
     "\n"
@@ -45,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 3,
    "id": "5ef8a1be",
    "metadata": {},
    "outputs": [],
@@ -65,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 4,
    "id": "8f8438d5",
    "metadata": {},
    "outputs": [],
@@ -92,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 5,
    "id": "f5c7c732",
    "metadata": {},
    "outputs": [],
@@ -102,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 6,
    "id": "23c38abf",
    "metadata": {},
    "outputs": [
@@ -185,9 +188,13 @@
     "                PriceOpen = row['Close']  # record close price as price of open\n",
     "                wdf.at[index,'OpenPrice']= PriceOpen\n",
     "                StopPrice = PriceOpen-(PriceOpen*StopLoss*-1) # setting stop-loss\n",
-    "\n",
     "                TPPrice = PriceOpen+(PriceOpen*ExitAfter)  # set target price\n",
     "                status=1\n",
+    "                \n",
+    "                # volume size block\n",
+    "                \n",
+    "\n",
+    "\n",
     "\n",
     "    #     # working with first opened position\n",
     "        if (PriceOpen >0) & (status==0):\n",
@@ -259,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 7,
    "id": "b1353715",
    "metadata": {},
    "outputs": [
@@ -622,7 +629,7 @@
        "[137 rows x 18 columns]"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -633,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 8,
    "id": "29a69b04",
    "metadata": {},
    "outputs": [],
@@ -645,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 9,
    "id": "f8c4c3b3",
    "metadata": {},
    "outputs": [],
@@ -656,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 10,
    "id": "5bd4afb6",
    "metadata": {},
    "outputs": [
@@ -713,7 +720,7 @@
        "2022-08-09  140.350645"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -724,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 11,
    "id": "36f5ccaf",
    "metadata": {},
    "outputs": [],
@@ -750,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 12,
    "id": "51ab625e",
    "metadata": {},
    "outputs": [],
