start working at balance class

--- a/Stocks-PF-strategy.ipynb
+++ b/Stocks-PF-strategy.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "f64ba5a1",
    "metadata": {},
    "outputs": [],
@@ -44,6 +44,88 @@
     "\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "482ef4e8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46ef7335",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "1fe5694c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# для класу deposit потрібно\n",
+    "# кількість акцій\n",
+    "# середня ціна\n",
+    "# дата старту набору позиції\n",
+    "# дата закінчення набору позиції\n",
+    "class StockBalance():\n",
+    "    \n",
+    "    def __init__(self, ticker, start, end, amount, value):\n",
+    "        self.ticker = ticker\n",
+    "        self.start = start\n",
+    "        self.end = end  \n",
+    "        self.amount = amount\n",
+    "        self.value = value\n",
+    "    \n",
+    "    def get_balance(self,count):\n",
+    "\n",
+    "        count +=count\n",
+    "        return count\n",
+    "        \n",
+    "    def get_data(self):\n",
+    "        raw = yf.download(self.ticker, self.start,self.end).Volume.to_frame()\n",
+    "        return raw\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "bb8b84b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stock = StockBalance('Aapl','2022-01-02','2023-01-01',0,0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "7df25b8a",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "get_balance() takes 1 positional argument but 2 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Vova\\Jupyter Root\\PennyStock\\Stocks-PF-strategy.ipynb Cell 8\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Vova/Jupyter%20Root/PennyStock/Stocks-PF-strategy.ipynb#X33sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m stock\u001b[39m.\u001b[39;49mget_balance(\u001b[39m0\u001b[39;49m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: get_balance() takes 1 positional argument but 2 were given"
+     ]
+    }
+   ],
+   "source": [
+    "stock.get_balance(0)"
    ]
   },
   {
