--- a/Stocks-PF-strategy.ipynb
+++ b/Stocks-PF-strategy.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "f64ba5a1",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "id": "f65c9313",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 45,
    "id": "1fe5694c",
    "metadata": {},
    "outputs": [],
@@ -75,22 +75,30 @@
     "# дата старту набору позиції\n",
     "# дата закінчення набору позиції\n",
     "class StockBalance():\n",
-    "    \n",
-    "    def __init__(self, ticker, start, end, amount, value):\n",
+    "    positionValue = 10000\n",
+    "   \n",
+    "    def __init__(self, ticker, start, end, amount=0, value=0):\n",
     "        self.ticker = ticker\n",
     "        self.start = start\n",
     "        self.end = end  \n",
     "        self.amount = amount\n",
     "        self.value = value\n",
+    "        self.get_data()\n",
+    "        self.value = value\n",
+    "        self.health = 0\n",
     "    \n",
-    "    def get_balance(self,count):\n",
+    "    def add(self,amount):\n",
+    "        self.health += amount\n",
     "\n",
-    "        count +=count\n",
-    "        return count\n",
+    "        \n",
     "        \n",
     "    def get_data(self):\n",
     "        raw = yf.download(self.ticker, self.start,self.end).Volume.to_frame()\n",
-    "        return raw\n",
+    "        self.data = raw\n",
+    "    \n",
+    "    def is_full(self):\n",
+    "        return self.health >=StockBalance.positionValue\n",
+    "\n",
     "\n",
     "\n",
     "\n"
@@ -98,34 +106,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 46,
    "id": "bb8b84b1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%***********************]  1 of 1 completed\n"
+     ]
+    }
+   ],
    "source": [
     "stock = StockBalance('Aapl','2022-01-02','2023-01-01',0,0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 50,
    "id": "7df25b8a",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "get_balance() takes 1 positional argument but 2 were given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\Vova\\Jupyter Root\\PennyStock\\Stocks-PF-strategy.ipynb Cell 8\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Vova/Jupyter%20Root/PennyStock/Stocks-PF-strategy.ipynb#X33sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m stock\u001b[39m.\u001b[39;49mget_balance(\u001b[39m0\u001b[39;49m)\n",
-      "\u001b[1;31mTypeError\u001b[0m: get_balance() takes 1 positional argument but 2 were given"
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "stock.get_balance(0)"
+    "#stock.add(100000)\n",
+    "#stock.health\n",
+    "stock.is_full()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "32f5cf34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stock.add(10000)"
    ]
   },
   {
@@ -187,15 +214,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "id": "23c38abf",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[*********************100%***********************]  1 of 1 completed\n"
+     "ename": "NameError",
+     "evalue": "name 'good_price' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Vova\\Jupyter Root\\PennyStock\\Stocks-PF-strategy.ipynb Cell 15\u001b[0m in \u001b[0;36m<cell line: 11>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Vova/Jupyter%20Root/PennyStock/Stocks-PF-strategy.ipynb#X16sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m datefromlist \u001b[39m=\u001b[39m list_stocks\u001b[39m.\u001b[39miloc[i][\u001b[39m'\u001b[39m\u001b[39mNotDate\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Vova/Jupyter%20Root/PennyStock/Stocks-PF-strategy.ipynb#X16sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39m#print('symbol=',symbol)\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Vova/Jupyter%20Root/PennyStock/Stocks-PF-strategy.ipynb#X16sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m \u001b[39m#print('datefromlist=',datefromlist)\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Vova/Jupyter%20Root/PennyStock/Stocks-PF-strategy.ipynb#X16sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m \u001b[39mif\u001b[39;00m good_price(symbol,datefromlist)\u001b[39m==\u001b[39m\u001b[39mFalse\u001b[39;00m: \u001b[39m# if price meet conditions\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Vova/Jupyter%20Root/PennyStock/Stocks-PF-strategy.ipynb#X16sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m     \u001b[39mcontinue\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Vova/Jupyter%20Root/PennyStock/Stocks-PF-strategy.ipynb#X16sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m \u001b[39m# to calc average volume use 20 days before\u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'good_price' is not defined"
      ]
     }
    ],
