--- a/Stocks-PF-strategy.ipynb
+++ b/Stocks-PF-strategy.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 69,
    "id": "1fe5694c",
    "metadata": {},
    "outputs": [],
@@ -77,28 +77,33 @@
     "class StockBalance():\n",
     "    positionValue = 10000\n",
     "   \n",
-    "    def __init__(self, ticker, start, end, amount=0, value=0):\n",
+    "    def __init__(self, ticker, start):\n",
     "        self.ticker = ticker\n",
     "        self.start = start\n",
-    "        self.end = end  \n",
-    "        self.amount = amount\n",
-    "        self.value = value\n",
-    "        self.get_data()\n",
-    "        self.value = value\n",
-    "        self.health = 0\n",
-    "    \n",
-    "    def add(self,amount):\n",
-    "        self.health += amount\n",
+    "        self.market_value = 0\n",
+    "        self.end_date = 0\n",
+    "        self.qty = 0\n",
+    "        self.avg_price = 0 \n",
     "\n",
-    "        \n",
-    "        \n",
-    "    def get_data(self):\n",
-    "        raw = yf.download(self.ticker, self.start,self.end).Volume.to_frame()\n",
-    "        self.data = raw\n",
     "    \n",
+    "    def add(self,amount, price):\n",
+    "        self.qty += amount\n",
+    "        val=price*amount\n",
+    "        self.market_value += val\n",
+    "        self.avg_price = self.market_value/self.qty\n",
+    "\n",
+    "         \n",
     "    def is_full(self):\n",
-    "        return self.health >=StockBalance.positionValue\n",
+    "        return self.market_value >=StockBalance.positionValue\n",
+    "    \n",
+    "    def clear(self):\n",
+    "        self.qty = 0\n",
+    "        self.market_value = 0\n",
+    "        self.avg_price = 0\n",
     "\n",
+    "        \n",
+    "        \n",
+    "        \n",
     "\n",
     "\n",
     "\n"
@@ -106,35 +111,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 70,
    "id": "bb8b84b1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[*********************100%***********************]  1 of 1 completed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "stock = StockBalance('Aapl','2022-01-02','2023-01-01',0,0)"
+    "stock = StockBalance('Aapl','2022-01-02')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 63,
    "id": "7df25b8a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,12 +144,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 81,
    "id": "32f5cf34",
    "metadata": {},
    "outputs": [],
    "source": [
-    "stock.add(10000)"
+    "stock.add(500,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "129a3253",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stock.clear()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "2f9be073",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.75"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stock.avg_price"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "937fe3c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stock.market_value"
    ]
   },
   {
@@ -181,10 +230,7 @@
    "id": "8f8438d5",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def OpenPosSig():\n",
-    "    pass"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -297,7 +343,7 @@
     "                if row[\"Close\"]>price_filter: # if price for opening is bigger than limit - please skip it\n",
     "                    continue\n",
     "\n",
-    "                \n",
+    "                # open position\n",
     "                PriceOpen = row['Close']  # record close price as price of open\n",
     "                wdf.at[index,'OpenPrice']= PriceOpen\n",
     "                StopPrice = PriceOpen-(PriceOpen*StopLoss*-1) # setting stop-loss\n",
