add function for calculation volume potensial

--- a/Stocks-PF-strategy.ipynb
+++ b/Stocks-PF-strategy.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "f65c9313",
    "metadata": {},
    "outputs": [],
@@ -41,8 +41,8 @@
     "UpperBandVol = 0.7      # if price is in range of  UpperBandVol and LowwerBandVol - please take a volume\n",
     "LowwerBandVol = 0.09    #   if price is in range of  UpperBandVol and LowwerBandVol - please take a volume\n",
     "positionValue = 10000  # the sum you need to collect\n",
-    "\n",
-    "\n",
+    "openPosStatus = False\n",
+    "volume_potensial =0 \n",
     "\n"
    ]
   },
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "1fe5694c",
    "metadata": {},
    "outputs": [],
@@ -100,6 +100,10 @@
     "        self.qty = 0\n",
     "        self.market_value = 0\n",
     "        self.avg_price = 0\n",
+    "    \n",
+    "    def volume_potensial(self, high, low, close, volume):\n",
+    "        volume_pot = ((close-low)/(high-low))/volume # add ABS module\n",
+    "        # need to continue\n",
     "\n",
     "        \n",
     "        \n",
@@ -206,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "5ef8a1be",
    "metadata": {},
    "outputs": [],
@@ -260,19 +264,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "id": "23c38abf",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'good_price' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\Vova\\Jupyter Root\\PennyStock\\Stocks-PF-strategy.ipynb Cell 15\u001b[0m in \u001b[0;36m<cell line: 11>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Vova/Jupyter%20Root/PennyStock/Stocks-PF-strategy.ipynb#X16sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m datefromlist \u001b[39m=\u001b[39m list_stocks\u001b[39m.\u001b[39miloc[i][\u001b[39m'\u001b[39m\u001b[39mNotDate\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Vova/Jupyter%20Root/PennyStock/Stocks-PF-strategy.ipynb#X16sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39m#print('symbol=',symbol)\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Vova/Jupyter%20Root/PennyStock/Stocks-PF-strategy.ipynb#X16sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m \u001b[39m#print('datefromlist=',datefromlist)\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Vova/Jupyter%20Root/PennyStock/Stocks-PF-strategy.ipynb#X16sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m \u001b[39mif\u001b[39;00m good_price(symbol,datefromlist)\u001b[39m==\u001b[39m\u001b[39mFalse\u001b[39;00m: \u001b[39m# if price meet conditions\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Vova/Jupyter%20Root/PennyStock/Stocks-PF-strategy.ipynb#X16sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m     \u001b[39mcontinue\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Vova/Jupyter%20Root/PennyStock/Stocks-PF-strategy.ipynb#X16sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m \u001b[39m# to calc average volume use 20 days before\u001b[39;00m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'good_price' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%***********************]  1 of 1 completed\n"
      ]
     }
    ],
@@ -320,6 +320,7 @@
     "\n",
     "    wdf['TradeAfterDaysSig'] = wdf['TradeAfter'] > datefromlist + datetime.timedelta(days=TradeAfterDays)\n",
     "    wdf['OpenPrice']=0\n",
+    "    wdf['openPosStatus']=False\n",
     "    wdf['Profit']=0\n",
     "    wdf['StopPrice']=0\n",
     "    wdf['TargetPrice']=0\n",
@@ -344,17 +345,25 @@
     "                    continue\n",
     "\n",
     "                # open position\n",
-    "                PriceOpen = row['Close']  # record close price as price of open\n",
-    "                wdf.at[index,'OpenPrice']= PriceOpen\n",
-    "                StopPrice = PriceOpen-(PriceOpen*StopLoss*-1) # setting stop-loss\n",
-    "                TPPrice = PriceOpen+(PriceOpen*ExitAfter)  # set target price\n",
+    "                openPosStatus = True  # there is signal \n",
+    "                wdf.at[index,'openPosStatus']= openPosStatus # record status in dataframe\n",
+    "#                 PriceOpen = row['Close']  # record close price as price of open\n",
+    "#                 wdf.at[index,'OpenPrice']= PriceOpen\n",
+    "#                 StopPrice = PriceOpen-(PriceOpen*StopLoss*-1) # setting stop-loss\n",
+    "#                 TPPrice = PriceOpen+(PriceOpen*ExitAfter)  # set target price\n",
     "                status=1\n",
     "                \n",
     "                # volume size block\n",
     "                \n",
+    "        # The first opened position HERE I STOPED FOR THE NEXT TIME CODING\n",
+    "        if status ==0 & openPosStatus = True:\n",
+    "            #\n",
+    "            if wdf.at[index,'Close']<UpperBandVol:  # if price didn't rise more than upper band\n",
+    "                \n",
+    "            \n",
+    "            \n",
     "\n",
-    "\n",
-    "\n",
+    "            \n",
     "    #     # working with first opened position\n",
     "        if (PriceOpen >0) & (status==0):\n",
     "            wdf.at[index,'OpenPrice']= PriceOpen\n",
@@ -367,12 +376,15 @@
     "                PriceOpen =0\n",
     "                TPPrice=0\n",
     "                StopPrice=0\n",
+    "                openPosStatus=False\n",
+    "                \n",
     "\n",
     "            if row['Low']<StopPrice:\n",
     "                wdf.at[index,'Profit']= RiskPertrade*StopLoss\n",
     "                PriceOpen =0\n",
     "                TPPrice=0\n",
     "                StopPrice=0\n",
+    "                openPosStatus=False\n",
     "\n",
     "\n",
     "        status = 0    \n",
@@ -384,6 +396,7 @@
     "                PriceOpen =0\n",
     "                TPPrice=0\n",
     "                StopPrice=0\n",
+    "                openPosStatus=False\n",
     "   \n",
     "    \n",
     "    #тут закінчується блок перебору строк акції і йде на наступну акцію\n",
