add function volume_poten

--- a/Stocks-PF-strategy.ipynb
+++ b/Stocks-PF-strategy.ipynb
@@ -83,7 +83,8 @@
     "        self.market_value = 0\n",
     "        self.end_date = 0\n",
     "        self.qty = 0\n",
-    "        self.avg_price = 0 \n",
+    "        self.avg_price = 0\n",
+    "        self.volume_pot = 0\n",
     "\n",
     "    \n",
     "    def add(self,amount, price):\n",
@@ -102,8 +103,10 @@
     "        self.avg_price = 0\n",
     "    \n",
     "    def volume_potensial(self, high, low, close, volume):\n",
-    "        volume_pot = ((close-low)/(high-low))/volume # add ABS module\n",
-    "        # need to continue\n",
+    "        volume_pot = ((abs(close-low)/abs(high-low))/volume)*5% # add ABS module\n",
+    "        \n",
+    "        return self.volume_pot\n",
+    "        \n",
     "\n",
     "        \n",
     "        \n",
@@ -321,6 +324,7 @@
     "    wdf['TradeAfterDaysSig'] = wdf['TradeAfter'] > datefromlist + datetime.timedelta(days=TradeAfterDays)\n",
     "    wdf['OpenPrice']=0\n",
     "    wdf['openPosStatus']=False\n",
+    "    wdf['VolumePoten']=0\n",
     "    wdf['Profit']=0\n",
     "    wdf['StopPrice']=0\n",
     "    wdf['TargetPrice']=0\n",
@@ -359,6 +363,11 @@
     "        if status ==0 & openPosStatus = True:\n",
     "            #\n",
     "            if wdf.at[index,'Close']<UpperBandVol:  # if price didn't rise more than upper band\n",
+    "                volume_potensial(wdf.at[index,'High'],wdf.at[index,'Low'],wdf.at[index,'Close'],wdf.at[index,'Volume'],)\n",
+    "                wdf.at[index,'VolumePoten']= PriceOpen\n",
+    "                \n",
+    "                \n",
+    "                \n",
     "                \n",
     "            \n",
     "            \n",
