add some little changes

--- a/Stocks-PF-strategy.ipynb
+++ b/Stocks-PF-strategy.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 88,
    "id": "f64ba5a1",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 89,
    "id": "f65c9313",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 90,
    "id": "1fe5694c",
    "metadata": {},
    "outputs": [],
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 91,
    "id": "5ef8a1be",
    "metadata": {},
    "outputs": [],
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 92,
    "id": "8f8438d5",
    "metadata": {},
    "outputs": [],
@@ -188,8 +188,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "id": "4075b15f",
+   "execution_count": 93,
+   "id": "4c291a9a",
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
        "2500.0"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 94,
    "id": "f5c7c732",
    "metadata": {},
    "outputs": [],
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 95,
    "id": "23c38abf",
    "metadata": {},
    "outputs": [
@@ -326,16 +326,9 @@
     "            #\n",
     "            #if row['Close']<UpperBandVol:  # if price didn't rise more than upper band\n",
     "                # оцінюємо потенціал обєму\n",
-    "            volume_potensial(wdf.at[index,'High'],wdf.at[index,'Low'],wdf.at[index,'Close'],wdf.at[index,'Volume'],)\n",
+    "            volume_potensial(row['High'],row['Low'],row['Close'],row['Volume'])\n",
     "            print(mystock.volume_pot)\n",
     "            wdf.at[index,'VolumePoten']= mystock.volume_pot\n",
-    "                \n",
-    "                \n",
-    "                \n",
-    "                \n",
-    "                \n",
-    "                \n",
-    "            \n",
     "            \n",
     "\n",
     "            \n",
@@ -413,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 102,
    "id": "b1353715",
    "metadata": {},
    "outputs": [
@@ -423,7 +416,7 @@
        "0"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 97,
    "id": "29a69b04",
    "metadata": {},
    "outputs": [],
@@ -446,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 98,
    "id": "f8c4c3b3",
    "metadata": {},
    "outputs": [],
@@ -457,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 99,
    "id": "5bd4afb6",
    "metadata": {},
    "outputs": [
@@ -496,7 +489,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 100,
    "id": "36f5ccaf",
    "metadata": {},
    "outputs": [],
@@ -533,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 101,
    "id": "51ab625e",
    "metadata": {},
    "outputs": [],
