trying to calculate volume

--- a/Stocks-PF-strategy.ipynb
+++ b/Stocks-PF-strategy.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 1,
    "id": "f64ba5a1",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 2,
    "id": "f65c9313",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 31,
    "id": "1fe5694c",
    "metadata": {},
    "outputs": [],
@@ -102,43 +102,12 @@
     "        self.avg_price = 0\n",
     "    \n",
     "    def volume_potensial(self, high, low, close, volume):\n",
-    "  \n",
-    "        self.volume_pot = float(((abs(close-low)/abs(high-low))*volume)*0.05)\n",
+    "        if close < UpperBandVol:\n",
+    "            self.volume_pot = float(((abs(close-low)/abs(high-low))*volume)*0.05)\n",
+    "        else: self.volume =0    \n",
     "        \n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bb8b84b1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7df25b8a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "32f5cf34",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "129a3253",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -150,15 +119,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "937fe3c5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mystock.is_full()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 4,
    "id": "5ef8a1be",
    "metadata": {},
    "outputs": [],
@@ -178,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 12,
    "id": "8f8438d5",
    "metadata": {},
    "outputs": [],
@@ -188,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 13,
    "id": "4c291a9a",
    "metadata": {},
    "outputs": [
@@ -198,7 +180,7 @@
        "2500.0"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 35,
    "id": "23c38abf",
    "metadata": {},
    "outputs": [
@@ -236,6 +218,18 @@
      "output_type": "stream",
      "text": [
       "[*********************100%***********************]  1 of 1 completed\n"
+     ]
+    },
+    {
+     "ename": "ZeroDivisionError",
+     "evalue": "float division by zero",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [35]\u001b[0m, in \u001b[0;36m<cell line: 11>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     84\u001b[0m             \u001b[38;5;66;03m# volume size block\u001b[39;00m\n\u001b[0;32m     85\u001b[0m             \n\u001b[0;32m     86\u001b[0m     \u001b[38;5;66;03m# The first opened position HERE I STOPED FOR THE NEXT TIME CODING\u001b[39;00m\n\u001b[0;32m     89\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m (status \u001b[38;5;241m==\u001b[39m\u001b[38;5;241m0\u001b[39m) \u001b[38;5;241m&\u001b[39m (openPosStatus \u001b[38;5;241m==\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m) \u001b[38;5;241m&\u001b[39m (mystock\u001b[38;5;241m.\u001b[39mis_full()\u001b[38;5;241m==\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m):\n\u001b[0;32m     90\u001b[0m         \u001b[38;5;66;03m#\u001b[39;00m\n\u001b[1;32m---> 92\u001b[0m         \u001b[43mmystock\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43madd\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrow\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mVolumePoten\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrow\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mClose\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;66;03m# ДОПРАЦЮВАТИ\u001b[39;00m\n\u001b[0;32m     95\u001b[0m         \u001b[38;5;66;03m#if row['Close']<UpperBandVol:  # if price didn't rise more than upper band\u001b[39;00m\n\u001b[0;32m     96\u001b[0m             \u001b[38;5;66;03m# оцінюємо потенціал обєму\u001b[39;00m\n\u001b[0;32m     97\u001b[0m         \u001b[38;5;66;03m#mystock.volume_potensial(row['High'],row['Low'],row['Close'],row['Volume'])\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    102\u001b[0m         \n\u001b[0;32m    103\u001b[0m \u001b[38;5;66;03m#     # working with first opened position\u001b[39;00m\n\u001b[0;32m    104\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m (PriceOpen \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m0\u001b[39m) \u001b[38;5;241m&\u001b[39m (status\u001b[38;5;241m==\u001b[39m\u001b[38;5;241m0\u001b[39m):\n",
+      "Input \u001b[1;32mIn [31]\u001b[0m, in \u001b[0;36mStockBalance.add\u001b[1;34m(self, amount, price)\u001b[0m\n\u001b[0;32m     20\u001b[0m val\u001b[38;5;241m=\u001b[39mprice\u001b[38;5;241m*\u001b[39mamount\n\u001b[0;32m     21\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmarket_value \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m val\n\u001b[1;32m---> 22\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mavg_price \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmarket_value\u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mqty\u001b[49m\n",
+      "\u001b[1;31mZeroDivisionError\u001b[0m: float division by zero"
      ]
     }
    ],
@@ -304,6 +298,9 @@
     "    \n",
     "    for index, row in wdf.iterrows():  # change to itter....\n",
     "        # looking for opening signal \n",
+    "        mystock.volume_potensial(row['High'],row['Low'],row['Close'],row['Volume'])\n",
+    "        wdf.at[index,'VolumePoten']= mystock.volume_pot    \n",
+    "        \n",
     "        if (PriceOpen ==0) & (lastrow[0]!=index): # if we haven't opened position and it's not last row\n",
     "            \n",
     "            if row['volsignal'] & row['TradeAfterDaysSig'] & row['GreenCandleSig'] & row['HighGrowPrevClose']:  # if Volume > than AvgVolume and green candle and high more then \n",
@@ -312,6 +309,7 @@
     "\n",
     "                # open position\n",
     "                openPosStatus = True  # there is signal \n",
+    "                \n",
     "                wdf.at[index,'openPosStatus']= openPosStatus # record status in dataframe\n",
     "#                 PriceOpen = row['Close']  # record close price as price of open\n",
     "#                 wdf.at[index,'OpenPrice']= PriceOpen\n",
@@ -322,13 +320,19 @@
     "                # volume size block\n",
     "                \n",
     "        # The first opened position HERE I STOPED FOR THE NEXT TIME CODING\n",
-    "        if status ==0 & openPosStatus == True:\n",
+    "               \n",
+    "        \n",
+    "        if (status ==0) & (openPosStatus == True) & (mystock.is_full()==False):\n",
     "            #\n",
+    "            \n",
+    "            mystock.add(row['VolumePoten'], row['Close']) # ДОПРАЦЮВАТИ\n",
+    "            \n",
+    "            \n",
     "            #if row['Close']<UpperBandVol:  # if price didn't rise more than upper band\n",
     "                # оцінюємо потенціал обєму\n",
-    "            volume_potensial(row['High'],row['Low'],row['Close'],row['Volume'])\n",
-    "            print(mystock.volume_pot)\n",
-    "            wdf.at[index,'VolumePoten']= mystock.volume_pot\n",
+    "            #mystock.volume_potensial(row['High'],row['Low'],row['Close'],row['Volume'])\n",
+    "            #print(mystock.volume_pot)\n",
+    "            #wdf.at[index,'VolumePoten']= mystock.volume_pot\n",
     "            \n",
     "\n",
     "            \n",
@@ -406,17 +410,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 23,
    "id": "b1353715",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "9768.963839960557"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 24,
    "id": "29a69b04",
    "metadata": {},
    "outputs": [],
@@ -439,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 26,
    "id": "f8c4c3b3",
    "metadata": {},
    "outputs": [],
@@ -450,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 27,
    "id": "5bd4afb6",
    "metadata": {},
    "outputs": [
@@ -489,7 +493,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 28,
    "id": "36f5ccaf",
    "metadata": {},
    "outputs": [],
